# brain_state_pred

./: .gitignore  LICENSE  README.md  evaluate.py  plotting.py  pyproject.toml  region_labels.txt  train.py  train_single_subject.py  train_with_paramgrid.py
.devcontainer/: devcontainer.bash_alises  devcontainer.json  setup_bashrc.sh
config/: config.yaml
configs/: config.yaml  default_config.yaml  single_subject_config.yaml
models/: __init__.py  graph_based.py  lstm.py  mlp.py  transformer_based.py
utils/: __init__.py  callbacks.py  dataset.py  loss_fns.py  loss_functions.py  make_datasplits.py  optimizers.py  prepare_data.py  trainer.py
