[project]
name = "brain-state-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.20",
    "matplotlib>=3.10.8",
    "nilearn>=0.13.1",
    "omegaconf>=2.3.0",
    "pandas>=3.0.1",
    "pytorch-trainer",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch==2.8.0",
    "torch-geometric>=2.7.0",
    # "torch-geometric-temporal>=0.56.2",
    "torchinfo>=1.8.0",
]


[tool.uv.sources]
torch = { index = "pytorch" }
pytorch-trainer = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
[tool.uv.extra-build-dependencies]
    torch-sparse = ["torch"]

[tool.uv.workspace]
members = [
    "pytorch_trainer",
]
